--- a/individual_work/html-css-1/index.html
+++ b/individual_work/html-css-1/index.html
@@ -10,199 +10,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
   <title>Iakovlev Danil | Portfolio</title>
+  <link rel="stylesheet" href="style.css">
   <!--[if IE]>
    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <style>
-    * {
-	margin: 0;
-	padding: 0;
-}
-    .flexbox1 {
-    display: flex;
-    margin: auto;
-    justify-content: space-between;
-    flex-direction: row;
-    align-items: center;
-    background: black;
-    max-width: 800px;
-    }   
-    .black {
-    background-color: black;
-    }
-    .flexbox2 {
-    display: flex;
-    margin: auto;
-    justify-content: space-between;
-    flex-direction: row;
-    align-items: center;
-    background: #C70039;
-    max-width: 800px;
-    }
-    .red {
-    background-color: #C70039;
-    }
-    .flexbox3 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    }
-    .flexbox4 {
-    display: flex;
-    max-width: 800px;
-    color: #C70039;
-    margin: auto;
-    justify-content: space-between;
-    flex-direction: row;
-    align-items: center;
-    }
-    .flexbox5 {
-    display: flex;
-    width: 800px;
-    margin: auto;
-    justify-content: space-between;
-    flex-direction: row;
-    align-items: left;
-    }
-    .blue {
-    background-color: DarkBlue;
-    }
-    .flexbox6 {
-    display: flex;
-    max-width: 800px;
-    margin: auto;
-    justify-content: space-between;
-    flex-direction: row;
-    align-items: center;   
-    color: white;
-    }
-    body {
-    font-family: 'Oswald', sans-serif;
-    }
-    .header {
-    flex: 2.5;
-    font-size: 18px;
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
-    text-align: center;
-    line-height: 50px;
-    color: white;
-    }   
-    .webs {
-    flex: 1;
-    font-size: 18px;
-    display: flex;
-    flex-direction: row;
-    justify-content: auto;
-    text-align: left;
-    line-height: 50px;
-    color: white;
-    }
-    .fotoflex {
-    flex: 2.5;
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-    text-align: right;
-    color: white;
-    }
-    .text1 {
-    flex: 2.2;
-    display: flex;
-    flex-direction: column;
-    justify-content: auto;
-    text-align: left;
-    color: white;
-    }
-    .text31 {
-    flex: 1;
-    display: flex;
-    }
-    .text32 {
-    flex: 5;
-    display: flex;
-    }
-    b {
-    font-size: 25px;
-    }
-    .c {
-    font-size: 20px;
-    font-weight: bold;
-    }
-    p {
-    font-size: 10px;
-    }
-    .item1 {
-    flex: 1;
-    display: flex;
-    color: black;
-    flex-direction: column;
-    text-align: justify;
-    margin: 0 5px;
-    }
-    .item2 {
-    flex: 1;
-    display: flex;
-    color: black;
-    flex-direction: column;
-    text-align: justify;
-    margin: 0 5px;
-    }
-    .item3 {
-    flex: 1;
-    display: flex;
-    color: black;
-    flex-direction: column;
-    text-align: justify;
-    margin: 0 5px;
-    }
-    .text6 {
-    flex: 4.5;
-    display: flex;
-    flex-direction: column;
-    text-align: justify; 
-    }
-    .flexfoto2 {
-    flex: 3;
-    display: flex;
-    }
-    .button {
-    background-color: #C70039; 
-    color: white; 
-    border: 0cm;
-    width: 25%;
-    height: 30px;
-    }
-
-    .button:hover {
-    background-color: white;
-    color: #C70039;
-    border: 0cm;
-    width: 25%;
-    height: 30px;
-    }
-    a {
-    color: white;
-    text-decoration: none;
-    }
-    .scale {
-    transition: 0.5s;
-    }
-    .scale:hover {
-    transform: scale(1.2);
-    }   
-    h1 {
-        font-size: 21px;
-    }
-    img {
-        max-width: 10%;
-        max-height: 10%;
-    }
-    .bomb {
-        font-weight: bold;
-    }
-  </style>
  </head>
  <body>
      <div class="black">
