--- a/individual_work/html-css-1/index.html
+++ b/individual_work/html-css-1/index.html
@@ -24,74 +24,18 @@
       <div class="webs">
         <a class="scale">About</a>&nbsp;&nbsp;&nbsp;
         <a class="scale">Services</a>&nbsp;&nbsp;&nbsp;
-        <a class="bomb">Porfolio</a>
+        <a class="bomb">Porfolio</a>&nbsp;&nbsp;&nbsp;
+        <a class="scale">Contact</a>
       </div>
      </div>
     </div>
-
-    <div class="red">
-        <br><br>
-      <div class="flexbox2">
-           <div class="text1">
-               <b id="1">One step forward.<br>At a time.</b>
-               Maecenas aliquet accumsan leo. Nullam lectus justo, vulputate eget mollis sed, tempor sed magna. Curabitur bibendum justo non orci.
-               <br><br>
-               <div class="flexbox3">
-                   <div class="textflex31">
-                     <c>Who we are</c>
-                     <p>Morbi leo mi, nonummy eget tristique non, rhoncus<br> non leo. Maecenas ipsum velit, consectetuer eu lobortis<br> ut, dictum at dui.</p>
-                    </div>
-                    <div class="textflex32">
-                     <c>Contact</c>
-                     <p>podpora@smartcity.cz<br>+420 777 666 555</p>   
-                    </div>
-               </div>
-            </div>
-           <div class="fotoflex">
-              <img src="photo.png" width=106% height=106%>
-           </div>
-           </div>
-           <br><br>
+    <br>
+    <div class="flexbox2"> 
+        <div class="work">
+          <h1>Portfolio</h1>
+          Recent Work
         </div>
     </div>
-    <br><br>
-    <div class="flexbox4">
-    <h1 id="2">Let's build smarter and more<br> sustainable places to live</h1>
-    </div>
-    <div class="flexbox5">
-        <div class="item1">
-         <img src="map.png" width=40% height=40%>
-         Global connectivness
-         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam erat volutpat. Donec iaculis gravida nulla. Vivamus porttitor turpis ac leo. Aliquam erat volutpat.</p>
-        </div>
-        <div class="item2">
-         <img src="diagram.png" width=40% height=40%>
-         Low energy consuption
-         <p>Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Suspendisse sagittis ultrices augue.</p>
-        </div>
-        <div class="item3">
-         <img src="stats.png" width=40% height=40%>
-         Data driven decisions
-         <p>Phasellus enim erat, vestibulum vel, aliquam a, posuere eu, velit. Curabitur sagittis hendrerit ante. Vivamus ac leo pretium faucibus. Etiam dictum tincidunt diam.</p>
-        </div>
-     </div>
-     </div>
-     <br><br>
-
-     <div class="blue">
-         <br><br>
-         <div class="flexbox6">
-             <div class="text6">
-                 <h1 id="3">How fast emerging cities<br>shapes modern world</h1>
-                 Pellentesque sapien. Mauris dolor felis, sagittis at, luctus sed, aliquam non, tellus. Nullam at arcu a est sollicitudin euismod. Pellentesque ipsum. Cras elementum. Pellentesque ipsum. In laoreet, magna id viverra tincidunt, sem odio bibendum justo, vel imperdiet sapien wisi sed libero. Nullam rhoncus aliquam metus. Aenean id metus id velit ullamcorper pulvinar.
-                <br><br>
-                 <button class="button">SEE CASE STUDY</button>
-                </div>
-             <div class="flexfoto2">
-                 <img src="tech.png" width=100% height=100%>
-             </div>
-         </div>
-         <br><br><br>
-     </div>
+    <hr><br>
  </body>
 </html>
