--- a/individual_work/html-css-1/index.html
+++ b/individual_work/html-css-1/index.html
@@ -9,6 +9,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link href="https://fonts.googleapis.com/css2?family=Encode+Sans&display=swap" rel="stylesheet">
   <title>Iakovlev Danil | Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <!--[if IE]>
@@ -19,7 +22,10 @@
      <div class="black">
      <div class="flexbox1">
       <div class="header">
-        <img src="logo.jpg">
+        <a class="scale"><div class="logo">LOGO</div></a>&emsp;&emsp;&emsp;&emsp;
+        <a class="scale">About</a>&emsp;&emsp;
+        <a class="scale">Services</a>&emsp;&emsp;
+        <a class="bomb">Porfolio</a>
       </div>
       <div class="webs">
         <a class="scale">Contact</a>
@@ -29,10 +35,59 @@
     <br>
     <div class="flexbox2"> 
         <div class="work">
-          <h1>Portfolio</h1>
-          Recent Work
+          <b>Portfolio</b>&emsp;Recent Work    
         </div>
     </div>
     <hr><br>
+    <div class="flexbox2">
+        <div class="work">
+            <img src="salzburg.JPG">&emsp;
+             <img src="salzburg.JPG">
+        </div>
+    </div>
+    <div class="flexbox2">
+        <div class="lefttext">
+            <h1>Project Title</h1>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien eleifend, suscipit augue eu, rhoncus neque. Phasellus placerat sem neque. Ut ultrices, dolor at porttitor viverra.
+        </div>
+        <div class="righttext">
+            <h1>Project Title</h1> 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien eleifend, suscipit augue eu, rhoncus neque. Phasellus placerat sem neque. Ut ultrices, dolor at porttitor viverra.
+        </div><br>
+    </div>
+    <br>
+    <div class="flexbox2">
+        <div class="work">
+            <img src="salzburg.JPG">&emsp;
+             <img src="salzburg.JPG">
+        </div>
+    </div>
+    <div class="flexbox2">
+        <div class="lefttext">
+            <h1>Project Title</h1>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien eleifend, suscipit augue eu, rhoncus neque. Phasellus placerat sem neque. Ut ultrices, dolor at porttitor viverra.
+        </div>
+        <div class="righttext">
+            <h1>Project Title</h1> 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien eleifend, suscipit augue eu, rhoncus neque. Phasellus placerat sem neque. Ut ultrices, dolor at porttitor viverra.
+        </div><br>
+    </div>
+    <br>
+    <div class="flexbox2">
+        <div class="work">
+            <img src="salzburg.JPG">&emsp;
+             <img src="salzburg.JPG">
+        </div>
+    </div>
+    <div class="flexbox2">
+        <div class="lefttext">
+            <h1>Project Title</h1>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien eleifend, suscipit augue eu, rhoncus neque. Phasellus placerat sem neque. Ut ultrices, dolor at porttitor viverra.
+        </div>
+        <div class="righttext">
+            <h1>Project Title</h1> 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien eleifend, suscipit augue eu, rhoncus neque. Phasellus placerat sem neque. Ut ultrices, dolor at porttitor viverra.
+        </div>
+    </div>
  </body>
 </html>
